# libcafeweather

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  libcafeweather.pot  makepot  output_2a6d96d873a2637b35f7666aafa11c31b37e5cf2  output_3812ab5716b8e126176f104435b89cdc0680c93b  output_a9d8235eee87af7548a1f659cc8deda4e58d1483  update_po-locations.sh
.tx/: config
2022-09-03-154534-14315-1@9a16f8dc510e_translations/: commitmsg  index.html  report-0d7031.html  report-1b914f.html  report-20fe9d.html  report-339c98.html  report-3d7553.html  report-54e1e1.html  report-688a74.html  report-72c2f8.html  report-9ba4eb.html  report-d766a0.html
2022-09-03-154757-6416-cppcheck@9a16f8dc510e_translations/: output_9a16f8dc510ebc9a65fbed16bb1e1052f948cd69
2022-09-03-191052-14322-1@734fdff00ee9_translations/: commitmsg  index.html  report-0d7031.html  report-1b914f.html  report-20fe9d.html  report-339c98.html  report-3d7553.html  report-54e1e1.html  report-688a74.html  report-72c2f8.html  report-9ba4eb.html  report-d766a0.html
2022-09-03-191317-7678-cppcheck@734fdff00ee9_translations/: output_734fdff00ee9565c7a39d73a5f513bd3a70336a2
2022-09-03-195135-14315-1@fe17d1b5337e_alternative_translations/: index.html  report-0d7031.html  report-1b914f.html  report-20fe9d.html  report-339c98.html  report-3d7553.html  report-54e1e1.html  report-688a74.html  report-72c2f8.html  report-9ba4eb.html  report-d766a0.html
2022-09-03-195419-3969-cppcheck@fe17d1b5337e_alternative_translations/: commitmsg  output_fe17d1b5337efeca69baec50aebba172eb5cee85
2022-09-03-212556-14317-1@ec6ac3ebb9db_alternative_translations/: index.html  output_ec6ac3ebb9db72df5ece773a2f514b910550bce4  report-0d7031.html  report-1b914f.html  report-20fe9d.html  report-339c98.html  report-3d7553.html  report-54e1e1.html  report-688a74.html  report-72c2f8.html  report-9ba4eb.html  report-d766a0.html
2022-09-03-212849-2003-cppcheck@ec6ac3ebb9db_alternative_translations/: stats.html
2022-09-03-213648-14318-1@fb88aafd29cb_master/: index.html  output_fb88aafd29cbf3b0887cda9e044372d859f13f32  report-0d7031.html  report-1b914f.html  report-20fe9d.html  report-339c98.html  report-3d7553.html  report-54e1e1.html  report-688a74.html  report-72c2f8.html  report-9ba4eb.html  report-d766a0.html
2022-09-03-213909-0337-cppcheck@fb88aafd29cb_master/: 0.html
2022-09-04-113411-14319-1@36fff337ce32_125/: index.html  report-0d7031.html  (+10 more)
libcafeweather/: AUTHORS  Makefile.am  cafeweather-enum-types.c.tmpl  cafeweather-enum-types.h.tmpl  cafeweather-location.c  cafeweather-location.h  cafeweather-prefs.c  cafeweather-prefs.h  cafeweather-timezone.c  cafeweather-timezone.h  cafeweather-uninstalled.pc.in  cafeweather-xml.c  cafeweather-xml.h  cafeweather.pc.in  location-entry.c  location-entry.h  org.cafe.weather.gschema.xml.in  parser.c  parser.h  test_locations.c  test_metar.c  test_sun_moon.c  timezone-menu.c  timezone-menu.h  weather-bom.c  weather-iwin.c  weather-met.c  weather-metar.c  weather-moon.c  weather-priv.h  weather-sun.c  weather-wx.c  weather.c  weather.h
(+726 files in other folders)
